BLOG 내용정리중 250322L2

--- a/pyhtml/GG12.html
+++ b/pyhtml/GG12.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 
-  <p><a href="../contents/B0000001.pdf">같이살자 우리모두</a></p>
-<p><a href="../contents/B0000002.pdf">당신도 빅뱅을 믿나요</a></p>
-<p><a href="../contents/B0000003.pdf">DNA의 배신_암</a></p>
-<p><a href="../contents/B0000004.pdf">지구가 찿는 것도 한계가 있다</a></p>
-<p><a href="../contents/B0000005.pdf">삶의 지혜를 죽음에게 묻다 (강의)</a></p>
-<p><a href="../contents/B0000006.pdf">진정한 행복의 7가지 조건 (강의)</a></p>
+  <p><a href="../contents/B0000001.pdf">차클139. 같이살자 우리모두</a></p>
+<p><a href="../contents/B0000002.pdf">차클136. 당신도 빅뱅을 믿나요</a></p>
+<p><a href="../contents/B0000003.pdf">차클138. DNA의 배신_암</a></p>
+<p><a href="../contents/B0000004.pdf">차클137. 지구가 참는 것도 한계가 있다</a></p>
+<p><a href="../contents/B0000005.pdf">세미나. 삶의 지혜를 죽음에게 묻다 (강의)</a></p>
+<p><a href="../contents/B0000006.pdf">세미나. 진정한 행복의 7가지 조건 (강의)</a></p>
 
 </body>
 </html>
