--- a/pyhtml/GG13.html
+++ b/pyhtml/GG13.html
@@ -33,7 +33,7 @@
 <p><a href="../book/book_0090.html">090. 내가 사랑한 책</a></p>
 <br><h4 id="GGSD">독서 _ 삶과죽음</h4>
 <p><a href="../docu/docu_0017.html">삶의 지혜를 죽음에게 묻다 (듣고)</a></p>
-<p><a href="../contents/B0000005.pdf">삶의 지혜를 죽음에게 묻다 (강의)</a></p>
+<p><a href="../contents/B0000005.pdf">세미나. 삶의 지혜를 죽음에게 묻다 (강의)</a></p>
 <p><a href="../book/book_0076.html">076. 타나토노트 2</a></p>
 <p><a href="../book/book_0075.html">075. 타나토노트 1</a></p>
 <p><a href="../book/book_0059.html">059. 아버지는 그렇게 작아져간다</a></p>
