--- a/pyhtml/GG18.html
+++ b/pyhtml/GG18.html
@@ -12,8 +12,8 @@
   <p><a href="../my/my_0100.html">MY0100. MY 금융</a></p>
 <p><a href="../my/my_0110.html">MY0110. 금융</a></p>
 <p><a href="../my/my_0120.html">MY0120. 부동산</a></p>
-<p><a href="../my/my_0130.html">MY0130. 투자</a></p>
-<p><a href="../my/my_9997.html">MY9997. 투자원칙</a></p>
+<p><a href="../my/my_0130.html">MY. MY0130. 투자</a></p>
+<p><a href="../my/my_9997.html">MY. MY9997. 투자원칙</a></p>
 <p><a href="../my/my_0200.html">MY0200. 노래</a></p>
 <p><a href="../my/my_0300.html">MY0300. 10분 요리</a></p>
 <p><a href="../my/my_0400.html">MY0400. MY BLOG</a></p>
