--- a/pyhtml/GG28.html
+++ b/pyhtml/GG28.html
@@ -9,37 +9,31 @@
 </head>
 <body>
 
-  <p><a href="../conhtml/C2409291.html">MY PGM </a></p>
-<p><a href="../conhtml/C0000003.html">한국의 잃어버릴 30년 (박석중)</a></p>
-<p><a href="../docu/docu_0016.html">Doc0016. 이렇게 계획 세우면 저절로 부지런해집니다. (삼프로 _ 김결일의 지혜의 밤 11화)</a></p>
-<p><a href="../docu/docu_0011.html">Doc0011. 메가스터디 _ 손주은 _ 삼프로TV</a></p>
-<p><a href="../docu/docu_0012.html">Doc0012. KBS 새해맞이 특별강연. 문화심리학자 김정운</a></p>
-<p><a href="../docu/docu_0015.html">Doc0015. ChatGPT 관련 강의 : 인문학</a></p>
-<p><a href="../docu/docu_0002.html">Doc0002. 시험 (EBS 다큐프라임) (18.06.06)</a></p>
-<p><a href="../docu/docu_0005.html">Doc0005. 대통령은 누구인가 (EBS 다큐프라임) (17.06.29)</a></p>
-<p><a href="../docu/docu_0006.html">Doc0006. 2017 시대탐구 청년 평범하고 싶다 (EBS 다큐프라임) (17.05.01)</a></p>
-<p><a href="../docu/docu_0008.html">Doc0008. 언어발달의 수수께끼 (EBS 다큐프라임) (14.03.23)</a></p>
-<p><a href="../docu/docu_0009.html">Doc0009. 거대한 균열 (2022 KBS신년특집) (22.01.10)</a></p>
-<p><a href="../news/news_0010.html">News0010. 등대공장</a></p>
-<p><a href="../news/news_0001.html">News0001. 자바전쟁</a></p>
-<p><a href="../news/news_0002.html">News0002. AI와 암묵지</a></p>
-<p><a href="../news/news_0004.html">News0004. 짐로저스</a></p>
-<p><a href="../news/news_0005.html">News0005. 하버드생 달력</a></p>
-<p><a href="../news/news_0006.html">News0006. 인도인구</a></p>
-<p><a href="../news/news_0007.html">News0007. 저물가종료</a></p>
-<p><a href="../news/news_0008.html">News0008. 셧다운제</a></p>
-<p><a href="../news/news_0009.html">News0009. 그린플레이션</a></p>
-<p><a href="../news/news_0011.html">News0011. 자산거품</a></p>
-<p><a href="../news/news_0012.html">News0012. 가계부채:금융안정보고서(21.9)</a></p>
-<p><a href="../news/news_0013.html">News0013. 인증서</a></p>
-<p><a href="../etc/etc_7004.html">Etc7004. 내부회계</a></p>
-<p><a href="../etc/etc_8001.html">Etc8001. 리더진단</a></p>
-<p><a href="../etc/etc_8002.html">Etc8002. 필수교육</a></p>
-<p><a href="../etc/etc_8003.html">Etc8003. 안전</a></p>
-<p><a href="../etc/etc_9003.html">Etc9003. FP</a></p>
-<p><a href="../etc/etc_9004.html">Etc9004. KUDU</a></p>
-<p><a href="../etc/etc_9005.html">Etc9005. P2E</a></p>
-<p><a href="../etc/etc_9006.html">Etc9006. 개인정보</a></p>
+  <p><a href="../conhtml/C2409291.html">개발. MY PGM </a></p>
+<p><a href="../conhtml/C0000003.html">유튜브. 한국의 잃어버릴 30년 (박석중)</a></p>
+<p><a href="../docu/docu_0011.html">유튜브. 메가스터디 _ 손주은 _ 삼프로TV</a></p>
+<p><a href="../docu/docu_0012.html">유튜브. KBS 새해맞이 특별강연. 문화심리학자 김정운</a></p>
+<p><a href="../docu/docu_0015.html">세미나. ChatGPT 관련 강의 : 최재봉</a></p>
+<p><a href="../docu/docu_0002.html">다큐. 시험 (EBS 다큐프라임) (18.06.06)</a></p>
+<p><a href="../docu/docu_0005.html">다큐. 대통령은 누구인가 (EBS 다큐프라임) (17.06.29)</a></p>
+<p><a href="../docu/docu_0006.html">다큐. 2017 시대탐구 청년 평범하고 싶다 (EBS 다큐프라임) (17.05.01)</a></p>
+<p><a href="../docu/docu_0008.html">다큐. 언어발달의 수수께끼 (EBS 다큐프라임) (14.03.23)</a></p>
+<p><a href="../docu/docu_0009.html">다큐. 거대한 균열 (2022 KBS신년특집) (22.01.10)</a></p>
+<p><a href="../news/news_0010.html">기사. 등대공장</a></p>
+<p><a href="../news/news_0001.html">기사. 자바전쟁</a></p>
+<p><a href="../news/news_0002.html">기사. AI와 암묵지</a></p>
+<p><a href="../news/news_0004.html">기사. 짐로저스</a></p>
+<p><a href="../news/news_0005.html">기사. 하버드생 달력</a></p>
+<p><a href="../news/news_0006.html">기사. 인도인구</a></p>
+<p><a href="../news/news_0007.html">기사. 저물가종료</a></p>
+<p><a href="../news/news_0008.html">기사. 셧다운제</a></p>
+<p><a href="../news/news_0009.html">기사. 그린플레이션</a></p>
+<p><a href="../news/news_0011.html">기사. 자산거품</a></p>
+<p><a href="../news/news_0012.html">기사. 가계부채:금융안정보고서(21.9)</a></p>
+<p><a href="../etc/etc_7004.html">강의. 내부회계</a></p>
+<p><a href="../etc/etc_8001.html">강의. 리더진단</a></p>
+<p><a href="../etc/etc_8002.html">강의. 필수교육</a></p>
+<p><a href="../etc/etc_8003.html">강의. 안전</a></p>
 
 </body>
 </html>
