--- a/pyhtml/GG30.html
+++ b/pyhtml/GG30.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 
-  <p><a href="https://openai.com/blog/chatgpt/">챗GPT</a></p>
-<p><a href="https://brunch.co.kr/@olmida/3">브런치스토리 : 방화벽 (2024.11.12)</a></p>
-<p><a href="../MY_PGMB/pyhtml/index.html">MY PGM BLOG 2</a></p>
-<p><a href="../MY_PGMB/pyhtml/my2_schedule_output.html">MY Schedule</a></p>
-<p><a href="../MY_PGMB/pyhtml/my2_schedule_output2.html">MY Test Schedule</a></p>
-<p><a href="../my/my_9998.html">MY9998. 무작정 기타 정리</a></p>
+  <p><a href="https://openai.com/blog/chatgpt/">URL. 챗GPT</a></p>
+<p><a href="https://brunch.co.kr/@olmida/3">URL. 브런치스토리 : 방화벽 (2024.11.12)</a></p>
+<p><a href="../MY_PGMB/pyhtml/index.html">개발. MY PGM BLOG 2</a></p>
+<p><a href="../MY_PGMB/pyhtml/my2_schedule_output.html">개발. MY Schedule</a></p>
+<p><a href="../MY_PGMB/pyhtml/my2_schedule_output2.html">개발. MY Test Schedule</a></p>
+<p><a href="../my/my_9998.html">MY. MY9998. 무작정 기타 정리</a></p>
 
 </body>
 </html>
