--- a/pyhtml/GG32.html
+++ b/pyhtml/GG32.html
@@ -9,12 +9,13 @@
 </head>
 <body>
 
-  <p><a href="../conhtml/C0000001.html">안과</a></p>
-<p><a href="../conhtml/C0000002.html">노인내과</a></p>
-<p><a href="../docu/docu_0001.html">Doc0001. 다이어트 혁명 (EBS 다큐프라임)</a></p>
-<p><a href="../docu/docu_0007.html">Doc0007. 100세 쇼크 (EBS 다큐프라임) (17.08.31)</a></p>
-<p><a href="../news/news_0003.html">News0003. 코털</a></p>
-<p><a href="../conhtml/CC202412011.html">건강 강의 (이동환 유튜버, 교육하는 의사) (2024.12.01)</a></p>
+  <p><a href="../conhtml/C0000001.html">유튜브. 안과</a></p>
+<p><a href="../conhtml/C0000002.html">유튜브. 노인내과</a></p>
+<p><a href="../docu/docu_0016.html">유튜브. 이렇게 계획 세우면 저절로 부지런해집니다. (삼프로 _ 김결일의 지혜의 밤 11화)</a></p>
+<p><a href="../docu/docu_0001.html">다큐. Doc0001. 다이어트 혁명 (EBS 다큐프라임)</a></p>
+<p><a href="../docu/docu_0007.html">다큐. Doc0007. 100세 쇼크 (EBS 다큐프라임) (17.08.31)</a></p>
+<p><a href="../news/news_0003.html">기사. 코털</a></p>
+<p><a href="../conhtml/CC202412011.html">세미나. 건강 강의 (이동환 유튜버, 교육하는 의사) (2024.12.01)</a></p>
 
 </body>
 </html>
