--- a/pyhtml/GG33.html
+++ b/pyhtml/GG33.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 뷰포트 설정 추가 -->
-  <title>경제</title>
+  <title>투자</title>
   <link rel="stylesheet" href="../styles.css"> <!-- 외부 CSS 파일 연결 -->
 </head>
 <body>
 
-  <p><a href="../conhtml/C2409141.html">금투세 유예 외치는 이유 (이언주)</a></p>
-<p><a href="../conhtml/C2409181.html">중국 디플레이션 (안유화_815머니톡)</a></p>
-<p><a href="../eco/eco_0100.html">연준_몸과 마음이 따로 노는 이유 (문홍철_연합뉴스_20240126)</a></p>
-<p><a href="../docu/docu_0013.html">Doc0013. 2023.08 유튜브</a></p>
-<p><a href="../docu/docu_0014.html">Doc0014. 2023.09 유튜브</a></p>
-<p><a href="../my/my_0130.html">MY0130. 투자</a></p>
-<p><a href="../my/my_9997.html">MY9997. 투자원칙</a></p>
-<p><a href="../my/my_9999.html">MY9999. 무작정 경제 정리</a></p>
-<p><a href="../conhtml/CC202410271.html">경제) 2025년 투자전망 특강 (홍춘옥) (2024.10.27)</a></p>
+  <p><a href="../conhtml/C2409141.html">유튜브. 금투세 유예 외치는 이유 (이언주)</a></p>
+<p><a href="../conhtml/C2409181.html">유튜브. 중국 디플레이션 (안유화_815머니톡)</a></p>
+<p><a href="../eco/eco_0100.html">유튜브. 연준_몸과 마음이 따로 노는 이유 (문홍철_연합뉴스_20240126)</a></p>
+<p><a href="../docu/docu_0013.html">유튜브. Doc0013. 2023.08 유튜브</a></p>
+<p><a href="../docu/docu_0014.html">유튜브. Doc0014. 2023.09 유튜브</a></p>
+<p><a href="../my/my_0130.html">MY. MY0130. 투자</a></p>
+<p><a href="../my/my_9997.html">MY. MY9997. 투자원칙</a></p>
+<p><a href="../my/my_9999.html">MY. MY9999. 무작정 경제 정리</a></p>
+<p><a href="../conhtml/CC202410271.html">유튜브. 경제) 2025년 투자전망 특강 (홍춘옥) (2024.10.27)</a></p>
 
 </body>
 </html>
