--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <p><a href="./pyhtml/GG28.html">기타등등</a></p>
 <p><a href="./pyhtml/GG29.html">영화</a></p>
 <p><a href="./pyhtml/GG32.html">건강</a></p>
-<p><a href="./pyhtml/GG33.html">경제</a></p>
+<p><a href="./pyhtml/GG33.html">투자</a></p>
+<p><a href="./pyhtml/GG46.html">IT정리</a></p>
 
 </body>
 </html>
