--- a/pyhtml/GG17.html
+++ b/pyhtml/GG17.html
@@ -13,7 +13,8 @@
 <p><a href="./GG28.html">기타등등</a></p>
 <p><a href="./GG29.html">영화</a></p>
 <p><a href="./GG32.html">건강</a></p>
-<p><a href="./GG33.html">경제</a></p>
+<p><a href="./GG33.html">투자</a></p>
+<p><a href="./GG46.html">IT정리</a></p>
 
 </body>
 </html>
