BLOG 정리 일단 마무리 250322L3

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 <p><a href="./pyhtml/GG30.html">Study</a></p>
 <p><a href="./pyhtml/GG10.html">Office</a></p>
 <br><h4 id="GG39">개발언어 </h4>
-<p><a href="./pyhtml/GG41.html">0.기본도구</a></p>
-<p><a href="./pyhtml/GG42.html">1.HTML</a></p>
-<p><a href="./pyhtml/GG43.html">2.Python</a></p>
-<p><a href="./pyhtml/GG44.html">3.R</a></p>
+<p><a href="./pyhtml/GG47.html">0. MY 개발</a></p>
+<p><a href="./pyhtml/GG41.html">1. 기본도구</a></p>
+<p><a href="./pyhtml/GG42.html">2. HTML</a></p>
+<p><a href="./pyhtml/GG43.html">3. Python</a></p>
+<p><a href="./pyhtml/GG44.html">4. R</a></p>
 <br><h4 id="GG38">빅데이터_AI</h4>
 <p><a href="./pyhtml/GG24.html">빅데이터 (Study)</a></p>
 <p><a href="./pyhtml/GG25.html">빅데이터 (세미나 등 느슨한)</a></p>
@@ -33,7 +34,6 @@
 <p><a href="./pyhtml/GG20.html">DASP</a></p>
 <p><a href="./pyhtml/GG21.html">SW자산관리사(C-SAM)</a></p>
 <br><h4 id="GG17">상식</h4>
-<p><a href="./pyhtml/GG12.html">차이나는 클라스</a></p>
 <p><a href="./pyhtml/GG28.html">기타등등</a></p>
 <p><a href="./pyhtml/GG29.html">영화</a></p>
 <p><a href="./pyhtml/GG32.html">건강</a></p>
