--- a/pyhtml/GG28.html
+++ b/pyhtml/GG28.html
@@ -9,11 +9,9 @@
 </head>
 <body>
 
-  <p><a href="../conhtml/C2409291.html">개발. MY PGM </a></p>
-<p><a href="../conhtml/C0000003.html">유튜브. 한국의 잃어버릴 30년 (박석중)</a></p>
+  <p><a href="../conhtml/C0000003.html">유튜브. 한국의 잃어버릴 30년 (박석중)</a></p>
 <p><a href="../docu/docu_0011.html">유튜브. 메가스터디 _ 손주은 _ 삼프로TV</a></p>
 <p><a href="../docu/docu_0012.html">유튜브. KBS 새해맞이 특별강연. 문화심리학자 김정운</a></p>
-<p><a href="../docu/docu_0015.html">세미나. ChatGPT 관련 강의 : 최재봉</a></p>
 <p><a href="../docu/docu_0002.html">다큐. 시험 (EBS 다큐프라임) (18.06.06)</a></p>
 <p><a href="../docu/docu_0005.html">다큐. 대통령은 누구인가 (EBS 다큐프라임) (17.06.29)</a></p>
 <p><a href="../docu/docu_0006.html">다큐. 2017 시대탐구 청년 평범하고 싶다 (EBS 다큐프라임) (17.05.01)</a></p>
@@ -34,6 +32,11 @@
 <p><a href="../etc/etc_8001.html">강의. 리더진단</a></p>
 <p><a href="../etc/etc_8002.html">강의. 필수교육</a></p>
 <p><a href="../etc/etc_8003.html">강의. 안전</a></p>
+<p><a href="../contents/B0000001.pdf">차클139. 같이살자 우리모두</a></p>
+<p><a href="../contents/B0000002.pdf">차클136. 당신도 빅뱅을 믿나요</a></p>
+<p><a href="../contents/B0000004.pdf">차클137. 지구가 참는 것도 한계가 있다</a></p>
+<p><a href="../contents/B0000005.pdf">세미나. 삶의 지혜를 죽음에게 묻다 (강의)</a></p>
+<p><a href="../contents/B0000006.pdf">세미나. 진정한 행복의 7가지 조건 (강의)</a></p>
 
 </body>
 </html>
