--- a/pyhtml/GG32.html
+++ b/pyhtml/GG32.html
@@ -15,6 +15,7 @@
 <p><a href="../docu/docu_0001.html">다큐. Doc0001. 다이어트 혁명 (EBS 다큐프라임)</a></p>
 <p><a href="../docu/docu_0007.html">다큐. Doc0007. 100세 쇼크 (EBS 다큐프라임) (17.08.31)</a></p>
 <p><a href="../news/news_0003.html">기사. 코털</a></p>
+<p><a href="../contents/B0000003.pdf">차클138. DNA의 배신_암</a></p>
 <p><a href="../conhtml/CC202412011.html">세미나. 건강 강의 (이동환 유튜버, 교육하는 의사) (2024.12.01)</a></p>
 
 </body>
