--- a/pyhtml/GG46.html
+++ b/pyhtml/GG46.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-  <p><a href="../news/news_0013.html">IT정리. 인증서</a></p>
+  <p><a href="../docu/docu_0015.html">세미나. ChatGPT 관련 강의 : 최재봉</a></p>
+<p><a href="../news/news_0013.html">IT정리. 인증서</a></p>
 <p><a href="../etc/etc_9003.html">IT정리. FP</a></p>
 <p><a href="../etc/etc_9004.html">IT정리. KUDU</a></p>
 <p><a href="../etc/etc_9005.html">IT정리. P2E</a></p>
