--- a/pyhtml/GG47.html
+++ b/pyhtml/GG47.html
@@ -4,20 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 뷰포트 설정 추가 -->
-  <title>개발언어 </title>
+  <title>0. MY 개발</title>
   <link rel="stylesheet" href="../styles.css"> <!-- 외부 CSS 파일 연결 -->
 </head>
 <body>
 
-  <br><h4 id="GG47">0. MY 개발</h4>
-<p><a href="../conhtml/C2409291.html">개발. MY PGM </a></p>
+  <p><a href="../conhtml/C2409291.html">개발. MY PGM </a></p>
 <p><a href="../MY_PGMB/pyhtml/index.html">개발. MY PGM BLOG 2</a></p>
 <p><a href="../MY_PGMB/pyhtml/my2_schedule_output.html">개발. MY Schedule</a></p>
 <p><a href="../MY_PGMB/pyhtml/my2_schedule_output2.html">개발. MY Test Schedule</a></p>
-<p><a href="./GG41.html">1. 기본도구</a></p>
-<p><a href="./GG42.html">2. HTML</a></p>
-<p><a href="./GG43.html">3. Python</a></p>
-<p><a href="./GG44.html">4. R</a></p>
 
 </body>
 </html>
