--- a/pyhtml/GG10.html
+++ b/pyhtml/GG10.html
@@ -16,7 +16,7 @@
 <p><a href="../office/office_0004.html">파워포인트</a></p>
 <p><a href="../office/office_0005.html">Sticky Notes</a></p>
 <p><a href="../office/office_0006.html">윈도우</a></p>
-<p><a href="../office/office_0007.html">맥OS</a></p>
+<p><a href="../office/office_0007.html">맥OS (25.03.21)</a></p>
 
 </body>
 </html>
