--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="ko">
-<head>
+<head> 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 뷰포트 설정 추가 -->
   <title>최근 변경</title>
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-  <p><a href="../conhtml/CC202504132.html">ChatGPT 업무혁신 바이블 (25.04.13)</a></p>
+  <p><a href="../conhtml/CC202504161.html">FP Study (25.04.16)</a></p>
+<p><a href="../conhtml/CC202504132.html">ChatGPT 업무혁신 바이블 (25.04.13)</a></p>
 <p><a href="../conhtml/CC202504131.html">잡동사니 이것저것 (25.04.13)</a></p>
 <p><a href="../office/office_0007.html">맥OS (25.03.21)</a></p>
 <p><a href="../conhtml/CC202503091.html">AI 온라인 교육 (25.03)</a></p>
