BLOG 250426L3 변경된내역 반영

--- a/pyhtml/GG29.html
+++ b/pyhtml/GG29.html
@@ -40,6 +40,7 @@
 <p><a href="../movie/movie_0029.html">MOV0029. 20.12.25 크리스마스 캐롤 (1951)        </a></p>
 <p><a href="../movie/movie_0030.html">MOV0030. 21.02.13 베일리 어게인 (2017)        </a></p>
 <p><a href="../movie/movie_0031.html">MOV0031. 20.10.23 이상한 나라의 앨리스 (2010) / 거울나라 (2016)        </a></p>
+<p><a href="../conhtml/CC202504261.html">영화 : 외계+인(1,2)</a></p>
 
 </body>
 </html>
