--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html lang="ko">
-<head> 
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 뷰포트 설정 추가 -->
   <title>최근 변경</title>
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <p><a href="../conhtml/CC202504161.html">FP Study (25.04.16)</a></p>
+  <p><a href="../conhtml/CC202504261.html">영화 : 외계+인(1,2)</a></p>
 <p><a href="../conhtml/CC202504132.html">ChatGPT 업무혁신 바이블 (25.04.13)</a></p>
 <p><a href="../conhtml/CC202504131.html">잡동사니 이것저것 (25.04.13)</a></p>
 <p><a href="../office/office_0007.html">맥OS (25.03.21)</a></p>
@@ -21,6 +21,7 @@
 <p><a href="../book/CC202412291.html">독서 : 왜 공부하는가(김진애) (2024.12.29)</a></p>
 <p><a href="../contents/A202412021.pdf">우리 뇌의 퍼펙트 게스 (이인아) (2024.12.02)</a></p>
 <p><a href="../conhtml/CC202412011.html">세미나. 건강 강의 (이동환 유튜버, 교육하는 의사) (2024.12.01)</a></p>
+<p><a href="https://lmarena.ai">ChatBot Arena (LMSYS) : AI 비교 사이트</a></p>
 <p><a href="https://learning.seongnam.go.kr/index.do">성남 배움숲 (2024.11.18)</a></p>
 <p><a href="../book/CC202411101.html">독서 : 저속노화 식사법(정희원) (2024.11.10)</a></p>
 <p><a href="../conhtml/CC202411091.html">경제) 트럼프 이후 (빈센트 _ 문홍철/윤여삼) (2024.11.09)</a></p>
