--- a/conhtml/CC202504261.html
+++ b/conhtml/CC202504261.html
@@ -144,6 +144,11 @@
 <p>감정은 놀랍구나 (측정되지 않는 무엇인가가 있다)</p>
 <p>시간 속에 가두어서 문제 해결</p>
 <p>뒤늦게 보고 감동을 받았는데, 폭망한 영화 (154만, 142만)</p>
+<p>감독 : 최동훈</p>
+<ul>
+<li>전우치(2009) (느낌이 비슷하다)</li>
+<li>천만관객 : 도둑들(2012), 암살(2015)</li>
+</ul>
 
             
             
