--- a/conhtml/CC202505061.html
+++ b/conhtml/CC202505061.html
@@ -268,7 +268,7 @@
 <li>AI 보급 속도가 빨라지면서 뭘 사야될까?</li>
 <li>사이버보안 / 전력망인프라</li>
 <li>물류가 핵심</li>
-<li>새로운 주도주가 나올 것임</li>
+<li>새로운 주도주가 나올 것임 / 압축 예상</li>
 </ul>
 
             
