--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-  <p><a href="../conhtml/CC202504261.html">영화 : 외계+인(1,2)</a></p>
+  <p><a href="../conhtml/CC202505061.html">트럼프 2기 모든 시나리오 (박석중) (25.05.06)</a></p>
+<p><a href="../conhtml/CC202504261.html">영화 : 외계+인(1,2)</a></p>
 <p><a href="../conhtml/CC202504132.html">ChatGPT 업무혁신 바이블 (25.04.13)</a></p>
 <p><a href="../conhtml/CC202504131.html">잡동사니 이것저것 (25.04.13)</a></p>
 <p><a href="../office/office_0007.html">맥OS (25.03.21)</a></p>
