--- a/conhtml/CC202505061.html
+++ b/conhtml/CC202505061.html
@@ -142,7 +142,7 @@
 <p>미국은 30년마다 경제 질서를 바꾼다</p>
 <p>구조적 관점 : 달러약세, 국채금리상승 (1998 LTCM, 2007 글로벌 금융위기)</p>
 <p>관세 문제는 확산과 해소의 관점으로 단순하게 보고 있으나,</p>
-<p>역사적 대통령이 되기 위한 무엇이 되기 위한 또다른 관점에서 봐야 함</p>
+<p>역사적인 대통령으로 기록되기 위한 또다른 관점에서 봐야 함</p>
 <ul>
 <li>레이 달리오 : 부채구조 구조적 한계로</li>
 <li>조지 프레드만 : 헌법, 제도</li>
@@ -165,7 +165,7 @@
 <li>평평한 운동장</li>
 <li>자유무역, 전후 복원 과정, 그때의 다우존스와 현재 나스닥</li>
 <li>운동장 기울어짐</li>
-<li>신플라자합의
+<li>신플라자합의 (80년대 후반)
 <ul>
 <li>유럽 : 제조 -&gt; 소비</li>
 <li>일본 : 잃어버린 30년</li>
@@ -178,12 +178,16 @@
 <li>중국 중심 글로벌 공급망 구축</li>
 <li>G2 중심 글로벌 변화</li>
 <li>GDP 45%, 시가총액 60%</li>
-<li>미국의 소비와 중국은 생산 : 낙수효과로 전세계 낙수효과</li>
-<li>미국은 소비에서 생산, 중국은 생산에서 소비로 변화 : 자급자족 : 무역축소(우리나라를 대체함)</li>
-</ul>
-<p>미국은 GDP는 증가하나, 시가총액은 하락할</p>
+<li>미국의 소비와 중국은 생산 : 전세계에 낙수효과 발생</li>
+<li>미국은 소비에서 생산, 중국은 생산에서 소비로 변화
 <ul>
-<li>#2 국가 50% 넘어가게 하지 않음</li>
+<li>자급자족 경제 : 무역축소(무역으로 먹고 사는 우리나라를 대체함)</li>
+</ul>
+</li>
+</ul>
+<p>미국은 GDP는 증가하나, 시가총액은 하락할 것 같음</p>
+<ul>
+<li>2등 국가가 자신의 GDP를 50% 넘어가게 하지 않도록 제어했음 (일본, 독일)</li>
 <li>하지만, 중국은 누르지 못함 (2007, 글로벌 금융위기)</li>
 <li>GDP 70% 수준, 구매력 기준 100%</li>
 </ul>
@@ -217,7 +221,7 @@
 <ul>
 <li>러우전쟁 종식 : 유가/곡물 가격 하락 / 관세 인플레이션 상쇄</li>
 <li>전략 광물 협정</li>
-<li>푸틴. 시간의 자기의 편</li>
+<li>푸틴. 시간은 자기의 편</li>
 </ul>
 </li>
 <li>3단계 : 중국</li>
@@ -243,7 +247,7 @@
 <li>펜데믹 이후 년 30% 이상 성장 (한국 소외)</li>
 <li>달려 자산의 구조적인 비중 확대 : 예전과 같은 기대수익률이 안 나올 것 같음</li>
 </ul>
-<p>미국 7 : 중국 3 포트폴리오 : 싸우면 둘 외에 나머지가 손해보는 싸음임</p>
+<p>미국 7 : 중국 3 포트폴리오 : 싸우면 둘 외에 나머지가 손해보는 구조임</p>
 <ul>
 <li>같이 사는 전략 필요</li>
 <li>스마일 커브 상에서 이익 높은 부분 차지한 미국이 제조 부분 도입하려고 함(마진 적은 부분)</li>
