--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 
-  <p><a href="../conhtml/CC202505061.html">트럼프 2기 모든 시나리오 (박석중) (25.05.06)</a></p>
+  <p><a href="../conhtml/CC202505181.html">팔란티어 (삼프로, 25.05.18)</a></p>
+<p><a href="../conhtml/CC202505182.html">경제전망 0% (조영무) (곽수종의 프리즘/삼프로, LG경제연구소, 25.05.18)</a></p>
+<p><a href="../conhtml/CC202505183.html">성소 (25.05.17)</a></p>
+<p><a href="../conhtml/CC202505184.html">건강 (윤방무) (삼프로, 25.05.18)</a></p>
+<p><a href="../conhtml/CC202505061.html">트럼프 2기 모든 시나리오 (박석중) (25.05.06)</a></p>
 <p><a href="../conhtml/CC202504261.html">영화 : 외계+인(1,2)</a></p>
 <p><a href="../conhtml/CC202504132.html">ChatGPT 업무혁신 바이블 (25.04.13)</a></p>
 <p><a href="../conhtml/CC202504131.html">잡동사니 이것저것 (25.04.13)</a></p>
