--- a/pyhtml/GG13.html
+++ b/pyhtml/GG13.html
@@ -21,6 +21,7 @@
 <p><a href="../book/book_0069.html">069. 나는 왜 네가 힘들까 괜찮아</a></p>
 <p><a href="../book/book_0051.html">051. 행복도 선택이다</a></p>
 <br><h4 id="GGSB">독서 _ 시</h4>
+<p><a href="../conhtml/CC202506011.html">독서 : 문학동네시인선 001~199 시인의 말 모음집 내가 아직 쓰지 않은 것 (2025.06.01)</a></p>
 <p><a href="../book/book_0126.html">126. 중학생 필독 시 (작성중)</a></p>
 <p><a href="../book/book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a></p>
 <p><a href="../book/book_0054.html">054. 백석 _ 외롭고 높고 쓸쓸한</a></p>
