--- a/pyhtml/GGSB.html
+++ b/pyhtml/GGSB.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-  <p><a href="../book/book_0126.html">126. 중학생 필독 시 (작성중)</a></p>
+  <p><a href="../conhtml/CC202506011.html">독서 : 문학동네시인선 001~199 시인의 말 모음집 내가 아직 쓰지 않은 것 (2025.06.01)</a></p>
+<p><a href="../book/book_0126.html">126. 중학생 필독 시 (작성중)</a></p>
 <p><a href="../book/book_0122.html">122. 꼭 읽어야 할 시 369 (윤동주)</a></p>
 <p><a href="../book/book_0054.html">054. 백석 _ 외롭고 높고 쓸쓸한</a></p>
 <p><a href="../book/book_0049.html">049. 난 빨강</a></p>
