--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-  <p><a href="../conhtml/CC202506062.html">투자 : 주요 재무지표 (작성중)</a></p>
+  <p><a href="../conhtml/CC202506201.html">아버지는 나를 처제, 하고 불렀다 (문학동네시인선 28 박연준)</a></p>
+<p><a href="../conhtml/CC202506062.html">투자 : 주요 재무지표 (작성중)</a></p>
 <p><a href="../conhtml/CC202506061.html">투자 : 밸류업과 미중 관세 협상</a></p>
 <p><a href="../conhtml/CC202506011.html">독서 : 문학동네시인선 001~199 시인의 말 모음집 내가 아직 쓰지 않은 것 (2025.06.01)</a></p>
 <p><a href="../conhtml/CC202505181.html">팔란티어 (삼프로, 25.05.18)</a></p>
