--- a/conhtml/CC202507141.html
+++ b/conhtml/CC202507141.html
@@ -139,9 +139,14 @@
         </head>
         <body class="vscode-body vscode-light">
             <h2 id="경제--시험전-1개월동안-250714">경제 : 시험전 1개월동안 (25.07.14)</h2>
+<h3 id="시장흐름">시장흐름</h3>
+<ul>
+<li>저평가 해소 흐름</li>
+<li>하방위험 해소중 (저점 상승)</li>
+</ul>
 <h3 id="문홍철">문홍철</h3>
 <ul>
-<li>고용
+<li>고용 (미국)
 <ul>
 <li>정부에서 창출한 고용 : 퇴직을 제때 못해서 고용 적게 줄어듦</li>
 <li>학자금대출은 주정부가 아니라 중앙정부에서 지출하는 것
@@ -154,10 +159,10 @@
 <li>부동산에서 주식으로 가라고 정부에서 명시적으로 제시
 <ul>
 <li>부동산을 투자 대상으로 바라보는 첫 정부</li>
-<li>Money Game으로 보다. 투자 대상을 주식으로 해라</li>
+<li>부동산 가격 변동을 Money Game으로 보다. 투자 대상을 주식으로 해라</li>
 </ul>
 </li>
-<li>공정한 Rule만 만들어 주어도 상승 가능하다
+<li>공정한 Rule만 만들어 주기만해도 주식시장은 상승 가능하다
 <ul>
 <li>판례 : 삼성물산 같은 판례 나오면 망함</li>
 <li>거래소 개혁 필요 : 기업 퇴출 프로세스 필요</li>
@@ -170,7 +175,7 @@
 <li>외국인 년초 25조 매수 / 하반기 40조 매도 (기업자율로 하겠다)</li>
 </ul>
 </li>
-<li>3%, 집중투표제</li>
+<li>3%, 집중투표제 도입 안됨</li>
 <li>기존 PBR 밴드 (0.75 ~ 1.4) : 4000</li>
 <li>미국 4배, 일본 2배 : 일본 수준 6000
 <br></li>
@@ -196,10 +201,11 @@
 <li><strong>자본을 줄인다</strong>. (지금은 이게 핵심)</li>
 </ul>
 </li>
-<li>25년초 하락
+<li><strong>25년초 하락</strong>
 <ul>
 <li>미국 AI가 압도적인줄 알았는데, 중국 딥시크 출현으로 일시적 하락</li>
 <li>트럼프 관세 과도한 부여로 다시 하락</li>
+<li>미국은 부채를 안 갚으려 한다. 계속 통화를 푸는 방식 유지하려고 함. 자산가격 하락하기 힘듦</li>
 </ul>
 </li>
 <li>미국의 현재
@@ -243,7 +249,7 @@
 </ul>
 <h3 id="이효석김열매-스테이블코인">이효석/김열매 (스테이블코인)</h3>
 <ul>
-<li>발행자의 시뇨리지</li>
+<li>발행자는 사적 기관인데, 이곳에 시뇨리지를 준다고</li>
 <li>초기 발행업체의 90%는 망할거다</li>
 <li>메타(2019) 시작하려고 했으나, 당시에는 반대로 뜻을 굽힘, 지금은 달라졌다</li>
 <li>이자를 주지 못하도록 하고 있지만, 다른 수단은 있다</li>
@@ -277,13 +283,75 @@
 <ul>
 <li>자산포트폴리오 변화 요구 : 지방주택시장, 주식시장</li>
 <li>부동산 급등에 대한 규제 필요했던 시점 : 주식시장의 서킷브레이크처럼</li>
-<li>매크로 환경이 다르다
+<li>매크로 환경이 너무 다르다
 <ul>
 <li>문재인정부 : 성장률 3%, 금리 1.5%</li>
 <li>이재명정부 : 성장률 1%, 금리 2.5%</li>
 </ul>
 </li>
 <li>정부가 돈을 쓰겠다. 가계가 함께 돈 쓰려고 하지 마라
+<br></li>
+</ul>
+<h3 id="조영무-lg---nh">조영무 (LG -&gt; NH)</h3>
+<ul>
+<li>성실 상환자에 대한 혜텍 필요
+<br></li>
+</ul>
+<h3 id="홍춘옥-2">홍춘옥 2</h3>
+<ul>
+<li>부동산공화국에서 주식(?)공화국으로 변화중</li>
+<li>ONE Strike Out</li>
+<li>우리나라는 말보다 행동을 보여줘야 하는 시장이다
+<ul>
+<li>이미 여러 차례 / 너무나도 오랫동안 상식이 통하지 않는 시장이였다</li>
+</ul>
+</li>
+<li>벤처 시장쪽으로 돈이 흘러가야
+<br></li>
+</ul>
+<h3 id="박세익이선엽">박세익/이선엽</h3>
+<ul>
+<li>단기 시장위험
+<ul>
+<li>일본 : 금리 상승 가능성</li>
+<li>중국 : 중국 관련 노이즈 발생 가능성</li>
+<li>한국 : 단기 과도한 쏠림, 과열 가능성</li>
+<li>미국 : 금리</li>
+</ul>
+</li>
+<li>금융(지주), 바이오, 증권, 중국소비주</li>
+<li>핵심광물 자산화 (구리 50% 관세), 7대 산업 중 하나
+<br></li>
+</ul>
+<h3 id="윤지호-2">윤지호 2</h3>
+<ul>
+<li>관세협상 리스크 : 품목관세 협의 결과 주목할 필요 있음</li>
+<li>결국. 생산시설을 가지고 오라는 것임</li>
+<li>개인의 콜 매수가 엄청나다. 상법과 세법 함께 개편 필요
+<ul>
+<li>7000조 부동산 : 2024년말 전국주택 7100, 2025.07 아파트 (서울 1700, 강남3구 750)</li>
+<li>3000조 주식<br>
+<br></li>
+</ul>
+</li>
+</ul>
+<h3 id="곽상준">곽상준</h3>
+<ul>
+<li>생산적인 재화로 투자가 필요함</li>
+<li>통화 약세, 전쟁 상시화 : 월급만 받아서 살면 인플레이션으로 인하여,,,
+<br></li>
+</ul>
+<h3 id="박시동">박시동</h3>
+<ul>
+<li>국민연금 계속 팔고 있는데, 지주사 관련은 샀다
+<br></li>
+</ul>
+<h3 id="염승환">염승환</h3>
+<ul>
+<li>딥시크 : 안보이슈로 사용 못한다</li>
+<li>엔비디아 시총 4조달러 : 왠만한 국가 GDP</li>
+<li>소버린AI에 대한 투자 발생중</li>
+<li>정부정책에 반하면 안된다
 <br></li>
 </ul>
 
