--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-  <p><a href="../conhtml/CC202507141.html">경제 : 시험전 1개월동안 (25.07.14)</a></p>
+  <p><a href="../conhtml/CC202507261.html">경제 : 7월을 마무리하며 (25.07.26)</a></p>
+<p><a href="../conhtml/CC202507141.html">경제 : 시험전 1개월동안 (25.07.14)</a></p>
 <p><a href="../conhtml/CC202506292.html">김경일 (25.06.14)</a></p>
 <p><a href="../conhtml/CC202506291.html">경제/투자 (25.06.29, 3100이후 3일 하락)</a></p>
 <p><a href="../conhtml/CC202506201.html">아버지는 나를 처제, 하고 불렀다 (문학동네시인선 28 박연준)</a></p>
