MYBLOG github move test

--- a/conhtml/CC202507261.html
+++ b/conhtml/CC202507261.html
@@ -2,7 +2,7 @@
         <html>
         <head>
             <meta charset="UTF-8">
-            <title>&#xacbd;&#xc81c; &colon; 7&#xc6d4;&#xc744; &#xb9c8;&#xbb34;&#xb9ac;&#xd558;&#xba70; &lpar;25&period;07&period;26&rpar;</title>
+            <title>&#xacbd;&#xc81c; &colon; 7&#xc6d4;&#xc744; &#xb9c8;&#xbb34;&#xb9ac;&#xd558;&#xba70;&Hat;&Hat; &lpar;25&period;07&period;26&rpar;</title>
             <style>
 /* From extension vscode.github */
 /*---------------------------------------------------------------------------------------------
@@ -138,7 +138,7 @@
         
         </head>
         <body class="vscode-body vscode-light">
-            <h2 id="경제--7월을-마무리하며-250726">경제 : 7월을 마무리하며 (25.07.26)</h2>
+            <h2 id="경제--7월을-마무리하며-250726">경제 : 7월을 마무리하며^^ (25.07.26)</h2>
 <h3 id="증시각도기">증시각도기</h3>
 <ul>
 <li>미채권 다시 5% 돌파</li>
