--- a/conhtml/CC202510121.html
+++ b/conhtml/CC202510121.html
@@ -139,71 +139,87 @@
         </head>
         <body class="vscode-body vscode-light">
             <h2 id="시대예보-경량문명-251012">시대예보: 경량문명 (25.10.12)</h2>
+<h3 id="프롤로그--피할-수-없는-문명의-가벼움">프롤로그 : 피할 수 없는 문명의 가벼움</h3>
+<ul>
+<li>012 AI가 참여하는 범주가 늘어나며, 인력 추가 없이도 규모가 빠르게 확장하는 기업이 폭증 (생산성의 새로운 격차)</li>
+<li>018 재능 공유 플랫폼을 통해 프로젝트 단위로 외주화되면 작은 기업의 고용 수요가 사라지고 있습니다</li>
+<li>019 (전문가의 총량이 한정) 유동적 협력의 한계가 문명의 혁신 속도에 병목으로 작동</li>
+<li>020 문명의 고도화가 이루어질수록 수혜자가 줄어들고 양극화가 커지는 상태에 빠짐</li>
+<li>021 물리적 한계가 없는 분야별 인공지능이 상시 협업하며, 새로운 협업은 시공간의 제한을 넘어서기 시작합니다.</li>
+<li>021 지능의 범용화  /  협업의 경량화</li>
+</ul>
+<br>
 <h3 id="제1장-경량문명의-출현">제1장 경량문명의 출현</h3>
-<p>019 유동적 협력의 한계가 문명의 혁신 속도에 병목그로 작동 (인간이라는 한계)
-020 문명의 고도화가 이루어질수록 수혜자가 줄어들고 양극화가 커지는 상태에 빠짐
-021 물리적 한계가 없는 분야별 인공지능이 상시 협업하며, 새로운 협업은 시공간의 제한을 넘어서기 시작합니다.
-021 지능의 범용화  /  협업의 경량화
-033 상대적으로 AI의 지식 습득 속도를 따라가기 어렵다
-038 분절되어 잘 정의된 업무는 자동화할 수 있다는 사실
-038 인간이 현재하는 일을 없애고, 그 위에 자신의 뜻과 의지를 고양하는 위치로 스스로 세우는 사회
-041 그 답을 알더라도 자원의 한계 때문에 풀지 못하고 남아 있는 것
-044 선점자들의 주요한 전략은 투자 규모를 늘려 경쟁사의 추격 의지를 무력화하는 방법입니다
-045 독점하지 않으면 죽는다
-054 인적관리부서가 아니라 태스크 관리부서 : 태스크를 잘 정의하고 이를 수행하기 위한 전략이 중요
-066 인간에게 유한하게 배정된 시간이라는 자원을 효율적으로 쓸 수 있게 해준다
-092 새로운 문명은 모든 이가 스스로 판단하고 스스로 점검하는 모드로 변화합니다
-093 경량문명이라는 단어의 '경'에 해당하는 '가벼움'은 이동성과 연결의 유연성을 뜻합니다.</p>
+<ul>
+<li>033 상대적으로 AI의 지식 습득 속도를 따라가기 어렵다</li>
+<li>037 유동화는 고용과 피고용의 수직적 관계가 협업이라는 수평적 관계로 변화하고, 협의의 기간도 업무 단위로 줄어드는 현상을 의미합니다.</li>
+<li>038 분절되어 잘 정의된 업무는 자동화할 수 있다는 사실</li>
+<li>038 인간이 현재하는 일을 없애고, 그 위에 자신의 뜻과 의지를 고양하는 위치로 스스로 세우는 사회</li>
+<li>041 그 답을 알더라도 자원의 한계 때문에 풀지 못하고 남아 있는 것</li>
+<li>044 선점자들의 주요한 전략은 투자 규모를 늘려 경쟁사의 추격 의지를 무력화하는 방법입니다</li>
+<li>045 독점하지 않으면 죽는다</li>
+<li>054 인적관리부서가 아니라 태스크 관리부서 : 태스크를 잘 정의하고 이를 수행하기 위한 전략이 중요</li>
+<li>066 인간에게 유한하게 배정된 시간이라는 자원을 효율적으로 쓸 수 있게 해준다</li>
+<li>092 새로운 문명은 모든 이가 스스로 판단하고 스스로 점검하는 모드로 변화합니다</li>
+<li>093 경량문명이라는 단어의 '경'에 해당하는 '가벼움'은 이동성과 연결의 유연성을 뜻합니다.</li>
+</ul>
 <br>
 <h3 id="제2장-경량문명의-양태">제2장 경량문명의 양태</h3>
-<p>104 (삼쩜삼) 불과 5년 만에 세무 분야 전문가의 업무에서 민간 기업의 저렴한 SaaS 서비스를 거쳐 공적 기관의 무료 서비스로 바뀜
-104 운영경비가 현저히 적은 시스템이라면 부가가치는 급속히 와해된다는 사실 : 두 가지 전략 가능 (시장 크기를 키우지 않는 것, 시스템이 할 수 없는 일을 선택)
-111 외주는 사라지고, 시스템과 협력하는 개인이 스스로 일합니다
-135 심미성이 품질의 보증으로 사용되던 관행이 무력화 -&gt; 자연스레 소비자의 눈높이는 아름다움을 넘어선 진정성으로 향합니다
-138 경량문명은 시작이 수월하기에 경쟁도 치열한 그러하기에 더우 깊어져야 하는 '깊이'를 다투는 문명이 됩니다
-140 (AI Agent) 시간이라는 자원을 압축해서 무언가 만들어 버는 효율에 집착해왔고, 이제 그 결실을 많은 곳에서 기대하고 있습니다.</p>
+<ul>
+<li>104 (삼쩜삼) 불과 5년 만에 세무 분야 전문가의 업무에서 민간 기업의 저렴한 SaaS 서비스를 거쳐 공적 기관의 무료 서비스로 바뀜</li>
+<li>104 운영경비가 현저히 적은 시스템이라면 부가가치는 급속히 와해된다는 사실 : 두 가지 전략 가능 (시장 크기를 키우지 않는 것, 시스템이 할 수 없는 일을 선택)</li>
+<li>111 외주는 사라지고, 시스템과 협력하는 개인이 스스로 일합니다</li>
+<li>135 심미성이 품질의 보증으로 사용되던 관행이 무력화 -&gt; 자연스레 소비자의 눈높이는 아름다움을 넘어선 진정성으로 향합니다</li>
+<li>138 경량문명은 시작이 수월하기에 경쟁도 치열한 그러하기에 더우 깊어져야 하는 '깊이'를 다투는 문명이 됩니다</li>
+<li>140 (AI Agent) 시간이라는 자원을 압축해서 무언가 만들어 버는 효율에 집착해왔고, 이제 그 결실을 많은 곳에서 기대하고 있습니다.</li>
+</ul>
 <br>
 <h3 id="제3장-경량조직의-법칙">제3장 경량조직의 법칙</h3>
-<p>158 경직된 조직에는 '윗사람'이 '아랫사람'에게 지시할 뿐, '아랫사람'이 '윗사람'에게 무언가 묻기 어려운 관습
-162 회사 생활의 유일한 권력으로 생각해온 '언로'를 빼앗겼다고 믿는 사람들의 뒤끝 작렬
-162 누가 언제 나를 평가할지 모르는 일상의 피로감을 구성원을 자기표현이 아닌 자기검열로 이끌었습니다.
-163 자리가 아닌 일, 평가가 아닌 성과, 직함과 이력이 아닌 자율성과 성취로 구성원을 바라보는 시각
-164 리더는 기회를 연결해주는 안내자입니다
-171 문제해결 능력뿐 아니라 문제 정의 능력이 선결
-174 일이 사라지는 것이 아니라, 단계가 축약 된다는 것입니다
-177 고객으로부터의 주문과 적기 선적을 지원하는 시스템을 숙지하고 자료를 관리하는 업무만으로도 10년을 보낼 수 있었습니다. -&gt; 자동화로 대체될 것임
-179 Quick-Stack은 빠른 시간 안에, 문제 해결을 위해 꼭 필요한 능력을 습득하고, 성장형 인간이 되어야 합니다. (말단의 업무는 AI가)(항상 최신 시스템을 써야 한다)(가장 중요한 역량은 열려 있는 배움의 태도)
-196 경쟁하게 하는 것이 아니라, 서로를 믿게 하는 것이 더 큰 시너지를 낸다
-197 인간은 망각은 존재 : 훌륭한 철학을 전한다 해도 주기적으로 다시끔 일깨워줘야
-202 모두가 계속해서 경쟁하고 그 성취의 목표가 커질수록 그에 들인 시간과 노력의 가치는 자연스레 모두에게 절하됨
-207 사람은 가진 것이 없을 때가 아니라, 자신이 찾고 있던 것이 대단한 것이 아니란 것을 깨달았을 때 더 슬퍼집니다
-209 채용이 지고 영입이 늘고 있음에 주목
-210 단편적 지식이나 공개된 정보의 습득으로 자신의 업을 보호할 수 없음을 손쉽게 유추할 수 있습니다
-212 경쟁자와 비교해 등수를 내는 것이 아닌, 나만의 것을 오롯이 해내는 것
-215 여러분이 하는 일에 안정감을 느낀다면 그건 잘 맞는 일이 아니예요. 늘 가능하다고 예상하는 것보다 조금 더 깊은 문에 들어가세요</p>
+<ul>
+<li>158 경직된 조직에는 '윗사람'이 '아랫사람'에게 지시할 뿐, '아랫사람'이 '윗사람'에게 무언가 묻기 어려운 관습</li>
+<li>162 회사 생활의 유일한 권력으로 생각해온 '언로'를 빼앗겼다고 믿는 사람들의 뒤끝 작렬</li>
+<li>162 누가 언제 나를 평가할지 모르는 일상의 피로감을 구성원을 자기표현이 아닌 자기검열로 이끌었습니다.</li>
+<li>163 자리가 아닌 일, 평가가 아닌 성과, 직함과 이력이 아닌 자율성과 성취로 구성원을 바라보는 시각</li>
+<li>164 리더는 기회를 연결해주는 안내자입니다</li>
+<li>171 문제해결 능력뿐 아니라 문제 정의 능력이 선결</li>
+<li>174 일이 사라지는 것이 아니라, 단계가 축약 된다는 것입니다</li>
+<li>177 고객으로부터의 주문과 적기 선적을 지원하는 시스템을 숙지하고 자료를 관리하는 업무만으로도 10년을 보낼 수 있었습니다. -&gt; 자동화로 대체될 것임</li>
+<li>179 Quick-Stack은 빠른 시간 안에, 문제 해결을 위해 꼭 필요한 능력을 습득하고, 성장형 인간이 되어야 합니다. (말단의 업무는 AI가)(항상 최신 시스템을 써야 한다)(가장 중요한 역량은 열려 있는 배움의 태도)</li>
+<li>196 경쟁하게 하는 것이 아니라, 서로를 믿게 하는 것이 더 큰 시너지를 낸다</li>
+<li>197 인간은 망각은 존재 : 훌륭한 철학을 전한다 해도 주기적으로 다시끔 일깨워줘야</li>
+<li>202 모두가 계속해서 경쟁하고 그 성취의 목표가 커질수록 그에 들인 시간과 노력의 가치는 자연스레 모두에게 절하됨</li>
+<li>207 사람은 가진 것이 없을 때가 아니라, 자신이 찾고 있던 것이 대단한 것이 아니란 것을 깨달았을 때 더 슬퍼집니다</li>
+<li>209 채용이 지고 영입이 늘고 있음에 주목</li>
+<li>210 단편적 지식이나 공개된 정보의 습득으로 자신의 업을 보호할 수 없음을 손쉽게 유추할 수 있습니다</li>
+<li>212 경쟁자와 비교해 등수를 내는 것이 아닌, 나만의 것을 오롯이 해내는 것</li>
+<li>215 여러분이 하는 일에 안정감을 느낀다면 그건 잘 맞는 일이 아니예요. 늘 가능하다고 예상하는 것보다 조금 더 깊은 문에 들어가세요</li>
+</ul>
 <br>
 <h3 id="제4장-경량문명-코리아">제4장 경량문명 코리아</h3>
-<p>221 여행의 목적이 풍광보다 '한국의 문화'인 방문객들의 열의가 확산된 것입니다.
-224 K팝 시장이 커질수록 한국 인구 5000만이 아닌 세계 수십억의 인구 중 가장 재능 있는 이들이 한국의 문화 시장으로 향할 것입니다
-232 다른 나라에는 없는 것을 가지고 있기에 모두가 찾아오는 한국이 되고 있습니다
-239 (해외 관광객) 그들이 원하는 것을 그들의 눈으로 이해해 볼 필요가 있습니다
-246 여기서 간과하면 안 될 것은 주목받는 물건들이 그 물성만으로 팔리는 것은 아니라는 사실입니다
-257 자국 브랜드를 많이 보유한 유통업계는 글로벌화의 기회를 잡을 수 있습니다
-261 만들고 파는 행위는 같을지 몰라도 생산에서 포장을 거쳐 고객이 제품을 만나는 그 순간까지 그 서사에 담긴 철학은 같을 수 없습니다</p>
+<ul>
+<li>221 여행의 목적이 풍광보다 '한국의 문화'인 방문객들의 열의가 확산된 것입니다.</li>
+<li>224 K팝 시장이 커질수록 한국 인구 5000만이 아닌 세계 수십억의 인구 중 가장 재능 있는 이들이 한국의 문화 시장으로 향할 것입니다</li>
+<li>232 다른 나라에는 없는 것을 가지고 있기에 모두가 찾아오는 한국이 되고 있습니다</li>
+<li>239 (해외 관광객) 그들이 원하는 것을 그들의 눈으로 이해해 볼 필요가 있습니다</li>
+<li>246 여기서 간과하면 안 될 것은 주목받는 물건들이 그 물성만으로 팔리는 것은 아니라는 사실입니다</li>
+<li>257 자국 브랜드를 많이 보유한 유통업계는 글로벌화의 기회를 잡을 수 있습니다</li>
+<li>261 만들고 파는 행위는 같을지 몰라도 생산에서 포장을 거쳐 고객이 제품을 만나는 그 순간까지 그 서사에 담긴 철학은 같을 수 없습니다</li>
+</ul>
 <br>
 <h3 id="제5장-무거운-세계의-끝-가벼운-세계의-시작">제5장 무거운 세계의 끝, 가벼운 세계의 시작</h3>
-<p>292 배움의 흐름은 경량문명의 네이티브인 새로운 세대에서 중량문명의 시대에 태어난 이전 새로운 한 방향으로 흐를 것을 알 수 있습니다
-309 자신의 노력에 대한 인섹티브가 즉각적으로 다가오는 시스템에서 새로운 보상체계에 의해 각성된 개인은 스스로를 찾아 착취하는 모드로 접어들 위험성에 노출되는 것입니다.
-312 공장장의 역할로 증강되어야 하는 새로운 문명이 밀려오고 있습니다.
-324 전환기의 아픔은 특정 시대를 살아가는 이들에게는 인생의 비극으로 다가올 수 있습니다
-324 지능을 기반으로 이 행성을 지배해온 종의 가장 우수한 특성을 보상하고 때로는 능가할 듯한 능력의 출현
-328 다루마리 빵집 : 본업에 충실 / 장인정신
-329 AI가 효율을 추구한다면, 인간을 충실함으로 본인의 존재 의미를 밝힘
-333 북유럽의 일상은 저녁 5시에 종료합니다. 8시간의 노동이 끝나면 정비와 휴식을 위해 모두가 일하지 않습니다. 인간의 지속 가능한 삶을 서로 배려하기 위해 합의한 규칙은 각자의 속로를 눞추는 선택과 같습니다.
-334 우리는 지금 만납니다 / 우리는 잠시 만납니다 / 우리는 다시 만납니다
-348 긴 비행을 준비하는 현실적인 전략은 '짐'을 줄이는 것입니다
-350 장거리 비행에서 제공되는 식사는 출발지가 아닌 도착지 시간을 기준으로 준비됩니다. 목적지의 시간에 맞추기 위해 ㅇ현재의 감각을 거슬러 조율합니다</p>
-<br>
+<ul>
+<li>292 배움의 흐름은 경량문명의 네이티브인 새로운 세대에서 중량문명의 시대에 태어난 이전 새로운 한 방향으로 흐를 것을 알 수 있습니다</li>
+<li>309 자신의 노력에 대한 인섹티브가 즉각적으로 다가오는 시스템에서 새로운 보상체계에 의해 각성된 개인은 스스로를 찾아 착취하는 모드로 접어들 위험성에 노출되는 것입니다.</li>
+<li>312 공장장의 역할로 증강되어야 하는 새로운 문명이 밀려오고 있습니다.</li>
+<li>324 전환기의 아픔은 특정 시대를 살아가는 이들에게는 인생의 비극으로 다가올 수 있습니다</li>
+<li>324 지능을 기반으로 이 행성을 지배해온 종의 가장 우수한 특성을 보상하고 때로는 능가할 듯한 능력의 출현</li>
+<li>328 다루마리 빵집 : 본업에 충실 / 장인정신</li>
+<li>329 AI가 효율을 추구한다면, 인간을 충실함으로 본인의 존재 의미를 밝힘</li>
+<li>333 북유럽의 일상은 저녁 5시에 종료합니다. 8시간의 노동이 끝나면 정비와 휴식을 위해 모두가 일하지 않습니다. 인간의 지속 가능한 삶을 서로 배려하기 위해 합의한 규칙은 각자의 속로를 눞추는 선택과 같습니다.</li>
+<li>334 우리는 지금 만납니다 / 우리는 잠시 만납니다 / 우리는 다시 만납니다</li>
+<li>348 긴 비행을 준비하는 현실적인 전략은 '짐'을 줄이는 것입니다</li>
+<li>350 장거리 비행에서 제공되는 식사는 출발지가 아닌 도착지 시간을 기준으로 준비됩니다. 목적지의 시간에 맞추기 위해 ㅇ현재의 감각을 거슬러 조율합니다</li>
+</ul>
 
             
             
