--- a/book/book_0132.html
+++ b/book/book_0132.html
@@ -140,6 +140,7 @@
         <body class="vscode-body vscode-light">
             <h1 id="더-플로">더 플로</h1>
 <p>초판 3쇄 발행일 2023.08.28, 브랜드:경이로움, 발행처:사이다경제, 지은이:안유화</p>
+<p>v2 : 26.01.04 ~</p>
 <br>
 <h2 id="01-투자란-시대적-흐름에-배팅하는-것"><strong>01. 투자란 시대적 흐름에 배팅하는 것</strong></h2>
 <p>020 영화 &quot;관상&quot; : 나는 사람의 얼굴을 봤을 뿐, 시대의 모습을 보지 못했소. 시시각각 변하는 파도만 본 격이지. 바람을 봐야 하는데. 파도를 만드는 건 바람인데 말이오</p>
@@ -150,16 +151,18 @@
 <p>029 일론 머스크가 남다른 점은 무엇이었을까? 바로 시대흐름을 바꿔버렸고 산업흐름을 선도한 것이다. 주식시장은 이를 반영했고, 그는 세계 1위 부자가 되었다  (우주여행, 범용AI)</p>
 <p>030 섹터에서 수익의 70~80%가 이미 결정된다고 말한다  /  종목 선택에서 나머지 20~30%</p>
 <p>031 내연 기관 자동차 시대의 종말이 왔음을 직감하고도 / 미련을 놓지 않는다면 설령 장기 보유를 한다고 해도 투자에 실패할 가능성이 크다</p>
-<p>035 소문이 더 멀리 퍼져 사람이 몰려들기 전에 미리 흐름에 올라타는 것이 관건이다</p>
+<p>035 <s>소문이 더 멀리 퍼져 사람이 몰려들기 전에 미리 흐름에 올라타는 것이 관건이다</s>
+035 흐름을 찾고, 그 시대적 흐름에 과감히 올라타라</p>
 <p>037 내일의 종가를 맞히는 것보다는 기업의 가치, 해당 섹터의 시대적 흐름과 그 성장성에 더 관심을 가져야 한다</p>
 <p>037 (찰리 멍거) 미시적인 주가보다 거시적인 산업의 흐름으로 기업의 가치를 파악하는 일이 중요함을 강조했다</p>
 <p>037 스토리가 있어야 감동을 주고 공감을 이끌며 위기에 빠지더라도 대중의 지지를 받는다</p>
+<p>037 어떤 기업이 가치가 있다는 건 아무도 흉내낼 수 없는 그 기업만의 시대적 스토리가 존재한다는 말이다</p>
 <p>040 인간은 자신이 아는 이론을 투자에 적용하기보다 심리에 더 휘둘리기 때문이다</p>
 <p>040 자신에게 익숙한 투자만 하는 사람들의 공통점은 실패를 경험하면서도 반복투자에서 벗어나지 못한다는 것이다</p>
-<p>041 질문</p>
+<p>041 <s>질문</s></p>
 <ul>
-<li>왜 당신은 포트폴리오에 외국 주식을 포함시키지 않는가?</li>
-<li>왜 당신은 수익 종목보다 손실 종목을 더 오래 보유하는가?</li>
+<li><s>왜 당신은 포트폴리오에 외국 주식을 포함시키지 않는가?</s></li>
+<li><s>왜 당신은 수익 종목보다 손실 종목을 더 오래 보유하는가?</s></li>
 </ul>
 <p>043 행동경제학 관점에서 나타난 편향의 종류</p>
 <ul>
@@ -187,14 +190,17 @@
 <li>상품 소유에 집착하지 않는 세대 -&gt; 실물상품 소비 축소, 가상공간 소비 선호</li>
 <li>기성세대와 달리 개인의 삶이 월급보다 중요하다</li>
 </ul>
-<p><strong>060 자본주의 사회에서 자본가로 살아가야 한다</strong>  (주식투자는 주주가 되는 것이미, 자본가가 되는 것이다)</p>
+<p>052 생물학적 나이가 젊다고 다 젊을까? 새로운 이야기, 지식을 삶에 반영하는 사람이야말로 젊은 사람이라고 할 수 있다</p>
+<p><strong>060 자본주의 사회에서 자본가로 살아가야 한다</strong></p>
+<p><strong>061 주식투자는 회사 창업자와 같은 주주가 되는 것이미, 자본가가 되는 것이다</strong></p>
 <p>063 금융상품을 소비할 때는 더욱 신중하게 접근해야 한다. 잃어도 괜찮은 돈은 세상에 단 1푼도 없다</p>
 <p>066 물가상승률을 이겨야 하는 자산관리의 중요성</p>
 <p>071 매일 주식시장을 들여다보고 경험해보면 왠지 위험이 커 보인다. 그러나 장기적인 시각으로 접근하면 주식이야말로 유망한 투자처가 된다</p>
-<p>072 동서양을 막론하고 성공적인 투자자들의 공통점은 장기 투자를 했다는 점이다</p>
+<p>072 <s>동서양을 막론하고 성공적인 투자자들의 공통점은 장기 투자를 했다는 점이다</s></p>
 <p>073 단기투자(1~5년) 10~20% / 장기투자(20~30년) 60~70%</p>
 <p><strong>074 만물이 시드는 때가 만물이 다시 태어나는 시기다</strong></p>
 <p><strong>075 위험을 감수하라</strong></p>
+<p>075 위험을 감수하고 도전하지 않으면 새로운 경험을 하고 기회를 발견할 수 없을 뿐더러 자신감과 사고의 탄력성을 가질 수 없다</p>
 <p>075 편안한 공간, 익숙한 생각에서 벗어나야 우리의 잠재력이 발휘되고, 미처 몰랐던 강점과 능력도 드러난다</p>
 <p>076 금융의 본질, 투자의 본질이 바로 리스크 테이킹 아니던가. 위험을 떠안지 않고 경제적 자유를 이루겠다는 바람은 불가능한 꿈이다</p>
 <br>
