--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 
-  <p><a href="../conhtml/CC202510211.html">책 : 시대예보: 경량문명 (25.10.12)</a></p>
+  <p><a href="../conhtml/CC202601263.html">이것저것 정리 (26.01.26)</a></p>
+<p><a href="../conhtml/CC202601262.html">책 : 꽃을 보듯 너를 본다 (26.01.26)</a></p>
+<p><a href="../conhtml/CC202601261.html">책 : 나도 함께라면 인생도 여행이다 (26.01.26)</a></p>
+<p><a href="../conhtml/CC202510121.html">책 : 시대예보: 경량문명 (25.10.12)</a></p>
 <p><a href="../conhtml/CC202507261.html">경제 : 7월을 마무리하며 (25.07.26)</a></p>
 <p><a href="../conhtml/CC202507141.html">경제 : 시험전 1개월동안 (25.07.14)</a></p>
 <p><a href="../conhtml/CC202506292.html">김경일 (25.06.14)</a></p>
