--- a/conhtml/CC202601261.html
+++ b/conhtml/CC202601261.html
@@ -158,9 +158,9 @@
 <br>
 <h3 id="가을-햇살-앞에-093">가을 햇살 앞에 (093)</h3>
 <p>고개를 숙여라</p>
-<p>이제 방 안 깊숙이
+<p>이제 방 안 깊숙이 <br>
 밀고 들어오는 햇살</p>
-<p>가을은, 가을 햇살은
+<p>가을은, 가을 햇살은 <br>
 우리에게 겸손을 가르치고</p>
 <br>
 <h3 id="나무-어른-147">나무 어른 (147)</h3>
@@ -174,6 +174,10 @@
 <p>너도 그렇다</p>
 <br>
 <h3 id="사랑에-답함-168">사랑에 답함 (168)</h3>
+<p>예쁘지 않은 것을 예쁘게 <br>
+보아주는 것이 사람이다</p>
+<p>좋지 않은 것을 좋게 <br>
+생각해주는 것이 사랑이다</p>
 <p>싫은 것도 잘 참아주면서  <br>
 처음만 그런 것이 아니라</p>
 <p>나중까지 아주 나중까지  <br>
@@ -193,6 +197,7 @@
 버리기에는 차마 아까운 시간입니다</p>
 <br>
 <h3 id="한-사람-건너-186">한 사람 건너 (186)</h3>
+<p>애기 보듯 너를 본다</p>
 <p>꽃을 보듯 너를 본다</p>
 <br>
 <h3 id="돌멩이-211">돌멩이 (211)</h3>
