--- a/conhtml/CC202601261.html
+++ b/conhtml/CC202601261.html
@@ -175,7 +175,7 @@
 <br>
 <h3 id="사랑에-답함-168">사랑에 답함 (168)</h3>
 <p>예쁘지 않은 것을 예쁘게 <br>
-보아주는 것이 사람이다</p>
+보아주는 것이 사랑이다</p>
 <p>좋지 않은 것을 좋게 <br>
 생각해주는 것이 사랑이다</p>
 <p>싫은 것도 잘 참아주면서  <br>
