--- a/conhtml/CC202601262.html
+++ b/conhtml/CC202601262.html
@@ -151,7 +151,7 @@
 슬픈 일이다 <br>
 잊어야 할 때를 안다는 것은 <br>
 슬픈 일이다 <br>
-내가 나늘 안다는 것은 더욱 <br>
+내가 나를 안다는 것은 더욱 <br>
 슬픈 일이다</p>
 <br>
 <h3 id="행복-072">행복 (072)</h3>
