--- a/conhtml/CC202601263.html
+++ b/conhtml/CC202601263.html
@@ -139,12 +139,27 @@
         </head>
         <body class="vscode-body vscode-light">
             <h1 id="이것저것-정리-260126">이것저것 정리 (26.01.26)</h1>
-<p>전차의 시대</p>
+<p>전차의 시대 (삼성전자, 하이닉스, 현대차)</p>
 <ul>
-<li>시가총액 1,2,3원</li>
+<li>시가총액 1,2,3위</li>
 <li>자동차산업 : 항상 저평가 산업, 공급과잉(고용이 많은 산업으로 국가지원으로 파산이 어렵다)</li>
 <li>아틀라스 : 산업현장 적합한 형태, 2년 내에 양산 예정, 1년 내에 상장한다면 가치를 땡길 수 있다</li>
-<li>엔비디아 / 구글과 연합 : 자율주행, 로보틱스</li>
+<li>엔비디아 / 구글과 연합 : 자율주행, 로보틱스
+<ul>
+<li>최고와 최고의 조합으로 테슬라와 대응</li>
+<li>산업용로볼(정밀도)에서 가능성</li>
+<li>VLA : 비전, 랭귀지, 액션 : 보고 듣고 행동하고</li>
+<li>빠르게 실증사업</li>
+<li>샤오미의 다크 팩토리</li>
+<li>조지아공장 : 아틀라스 적용, 국경 넘기 어려울 수 있다</li>
+<li>완전자동화로 어쩔 수 없이 갈 수 밖에 없다</li>
+</ul>
+</li>
+<li>지배구조 개선, 보스턴다이너믹스 상장</li>
+<li>도요타 11배 : 현대차 적정주가, 로봇을 기대한다면 향후에 테슬라 주가 모양 따를수도</li>
+<li>삼성전자는 보유자의 영역(15), 현대차는 보유자 + 용기있는자 (30, 오를때보면그렇지)</li>
+<li>26년은 모두 반영한듯. 27년 이후는 모른다</li>
+<li>학습에서 추론으로 바뀌면서 메모리가 엄청 많이 필요하다 : 예측 못한 활황. 향후도...</li>
 </ul>
 <p>로봇산업에서 버블이 나올 수 있다</p>
 <ul>
@@ -152,27 +167,8 @@
 <li>버블 시기에 해당 산업에 인재가 들어온다</li>
 <li>여기에서 진짜배기가 나온다. 다수는 망한다</li>
 <li>기술은 남는데, 자본은 대규모로 사라질 수 있다</li>
-</ul>
-<p>현대차 / 삼성전자</p>
-<ul>
-<li>지배구조 개선, 보스턴다이너믹스 상장</li>
-<li>도요타 11배 : 현대차 적정주가, 로봇을 기대한다면 향후에 테슬라 주가 모양 따를수도</li>
-<li>삼성전자는 보유자의 영역(15), 현대차는 보유자 + 용기있는자 (30, 오를때보면그렇지)</li>
-<li>26년은 모두 반영한듯. 27년 이후는 모른다</li>
-<li>학습에서 추론으로 바뀌면서 메모리가 엄청 많이 필요하다 : 예측 못한 활황. 향후도...</li>
-</ul>
-<p>일본 국채 금리 급등</p>
-<ul>
-<li>다른 선진국들도 덩달아 안정이 안됨</li>
-<li>그린란드 사태로 덴마크에서 일부 국채 던짐, 캐나다 나도 있는데,,,</li>
-<li>(일본) 은행 예금으로 국채를 많이 샀는데, 자금이 주식시장으로 이동중, 장기금리 급등</li>
-<li>2.8 선거, 국민 희생 강요로 또 돈풀기 할까?</li>
-<li>베센트 : 일본. 니가 알아서 국채 금리 안정화 시켜라</li>
-</ul>
-<p>변곡점 시점</p>
-<ul>
-<li>트럼프 : 베네주엘라, 그린란드 : 리플레이션</li>
-<li>시장은 현재 위험구간으로 인식중</li>
+<li>주가가 선행하고 심리는 후행한다</li>
+<li>현재 우리나라 개인들의 자본이 많다</li>
 </ul>
 <p>한국지수</p>
 <ul>
@@ -190,18 +186,44 @@
 </ul>
 </li>
 <li>PBR은 아직 싸지만, 부동산이 목 좋은 곳만 찾듯 주식도...</li>
-<li>코스닥 날뛰는 것은 거품일 수도</li>
 <li>시장은 격앙되어 있다. 현금도 투자다</li>
 <li>현재 시장은 상승세를 보고 투자하는 것이라면...</li>
 <li>주가는 항상 비샀다. 가격을 보고 사는 것이 아니라 벨류에이션을 보고 사야 한다</li>
 <li>액티브 펀드 : 수급을 통해서 올릴 수 있다.</li>
 <li>5000은 어렵지 않다. 하지만, 지키는 것은 쉽지 않다</li>
 </ul>
+<p>코스닥지수 (거래소)</p>
+<ul>
+<li>거래소 정화가 먼저 : 특히 코스닥</li>
+<li>코스닥 날뛰는 것은 거품일 수도</li>
+<li>자금 조달 창구 역할 충실 / 투자자 보호는 외면</li>
+</ul>
 <p>지방활성화</p>
 <ul>
 <li>예산은 편성해 줄께. 어떻게 기업 유치할래</li>
 <li>주식 4, 부동산 0.15 : 대출할 때 위험 가중치</li>
 <li>둔촌 주공때 너무 많은 돈을 풀어서 연착륙할 시기를 놓쳤다</li>
+</ul>
+<p>일본 국채 금리 급등</p>
+<ul>
+<li>다른 선진국들도 덩달아 안정이 안됨</li>
+<li>그린란드 사태로 덴마크에서 일부 국채 던짐, 캐나다 나도 있는데,,,</li>
+<li>(일본) 은행 예금으로 국채를 많이 샀는데, 자금이 주식시장으로 이동중, 장기금리 급등</li>
+<li>2.8 선거, 국민 희생 강요로 또 돈풀기 할까?</li>
+<li>베센트 : 일본. 니가 알아서 국채 금리 안정화 시켜라</li>
+<li>국내 금리 너무 높다. 하지만 낮추기 어렵다</li>
+<li>미국 디플레로 환율은 떨어져도 금리까지 떨어질지는 알 수 없다</li>
+</ul>
+<p>변곡점 시점</p>
+<ul>
+<li>트럼프 : 베네주엘라, 그린란드 : 리플레이션</li>
+<li>시장은 현재 위험구간으로 인식중</li>
+</ul>
+<p>대만병</p>
+<ul>
+<li>경제성장률 7.4%인데, 임금은 안 오르는 이상한 나라</li>
+<li>외환보유고 6000억불 (우리나라 4000)</li>
+<li>양안문제, 97외환위기 겨우 넘김</li>
 </ul>
 
             
