--- a/pyhtml/GG34.html
+++ b/pyhtml/GG34.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-  <p><a href="../conhtml/CC202601263.html">이것저것 정리 (26.01.26)</a></p>
+  <p><a href="../conhtml/CC202602241.html">책 : (인간의 마지막 질문) AGI, 천사인가 악마인가 </a></p>
+<p><a href="../conhtml/CC202602221.html">이것저것 정리 (26.02.21)</a></p>
+<p><a href="../conhtml/CC202601263.html">이것저것 정리 (26.01.26)</a></p>
 <p><a href="../conhtml/CC202601262.html">책 : 꽃을 보듯 너를 본다 (26.01.26)</a></p>
 <p><a href="../conhtml/CC202601261.html">책 : 나도 함께라면 인생도 여행이다 (26.01.26)</a></p>
 <p><a href="../conhtml/CC202510121.html">책 : 시대예보: 경량문명 (25.10.12)</a></p>
