--- a/conhtml/CC202602241.html
+++ b/conhtml/CC202602241.html
@@ -176,12 +176,23 @@
 <li>퍼셉트론은 특화된 문제만 풀 수 있다</li>
 <li>선형으로 분리 가능한 문제만 해결 가능함 (MLP, 보편 근사 정리)</li>
 <li>-&gt; 다층으로 연결하면 해결됨, 이론적으로 3층이면 모든 문제 해결 가능함</li>
-<li>시냅스의 가중치 찾는 것 어려움</li>
 </ul>
 </li>
+<li>학습
+<ul>
+<li>시냅스의 가중치 찾는 것 어려움</li>
+<li>이후 역전파를 통해서 학습 : 정답과 오답의 차이를 계속 줄여나가면서 학습</li>
+<li>인간이 설명하고, 기계가 맞히도록 한 것은 50년 동안 실패</li>
+<li>데이터만 넣어주고 기계가 학습을 통해서 스스로 규칙을 찾음</li>
+<li>기계가 찾은 정답을 인간이 이해하지 못함</li>
+</ul>
+</li>
+<li>CNN : 물체 인식 문제 해결 (2012)</li>
 </ul>
 <br>
 <h3 id="2장-생성형ai의-출현">2장. 생성형AI의 출현</h3>
+<p>058 5년 동안 언어 문제를 푸는 과정에서 생성형 AI라는 두번째 혁신 : 언어 문제가 해결되니깐, 나머지 문제들도 해결</p>
+<p>060 그림에서는 픽셀간에 인과관계가 없어서 독립적으로 해석할 수 있지만, 문장은 독립적으로 처리할 수 없습니다</p>
 <br>
 <h3 id="3장-무서운-상상">3장. 무서운 상상</h3>
 <br>
